fix home page link disappear on smaller screens

--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -35,10 +35,6 @@
         color: black;
       }
     }
-
-    .text {
-      display: none;
-    }
   }
 
   .links {
